# what-was-that-port

./: .gitignore  AI_extract.py  README.md  __init__.py  __main__.py  cli.py  csv_export.py  fingerprints.py  host_discovery.py  main1.py  models.py  privilege_adapter.py  privileged_worker.py  pyproject.toml  pytest.ini  requirements.txt  scanner_adapter.py  service_fingerprint.py  tcp_connect_scanner.py  tcp_fin_scanner.py  tcp_syn_scanner.py  udp_scanner.py  utils.py
debian/: changelog  control  install
examples/: integration_demo.py
packaging/: README.md
packaging/linux/: build-deb.sh  debian-control.template  org.whatwasthatport.policy  what-was-that-port.desktop
packaging/windows/: README.md  build-windows.bat  build-windows.ps1  what-was-that-port-gui.spec  what-was-that-port-worker.spec  what-was-that-port.iss
tests/: test_cli_formatting.py  test_csv_export.py  test_network_localhost.py  test_privilege_adapter.py  test_scanner_adapter.py  test_tcp_fin_scanner.py  test_udp_scanner.py  test_utils.py
